# Please respect the alphabetical ordering!!!
[metadata]
author = Imran Mumtaz
author_email = iomumtaz@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities
description = Waiting, for humans.
keywords = waiting, polling, synchronization, wait until, test tools
license = MIT License
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = w8ing
project_urls =
    Homepage=https://github.com/ImXron/w8ing
    Source=https://github.com/ImXron/w8ing
    Tracker=https://github.com/ImXron/w8ing/issues
python_requires = >=3.6
url = http://pypi.python.org/pypi/w8ing

[options]
packages = find:

[tool:pytest]
addopts =
    --cov=w8ing
    --cov-fail-under 95
    --cov-report term-missing
    --strict-markers
    --verbose
markers =
    ensure: All tests that relate to the "ensure" method.
    unit: All tests that are considered unit tests.
    until: All tests that relate to the "until" method.
testpaths = tests
